Bug 1714143 - Revert bug 1705927. r=tnikkel

The reftest added in bug 1705927 is renamed to overscroll-disabled.html to test
overscrolling doesn't happen with apz.overscroll.enable=false.

Differential Revision: https://phabricator.services.mozilla.com/D157689